fix: spacings

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -77,16 +77,18 @@ a{
   }
   &_divider{
     width: 2px;
-    height: 22px;
+    height: 24px;
     background-color: #000;
     margin-left: 20px;
-    margin-right: 28px;
+    margin-right: 15px;
   }
   &_title{
     padding: 5px;
     span{
-      font-size: 18px;
+      font-size: 16px;
       font-weight: 600;
+      font-family: 'Segoe UI';
+      letter-spacing: 0.5px;
     }
     &:hover{
       span{
@@ -128,7 +130,7 @@ a{
       position: relative;
 
       $line-width: 5px;
-      $right-offset: 12px;
+      $right-offset: 8px;
 
       &::after{
         position: absolute;
